<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrocandoIdeias</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Email ou Username</string>
    <string name="email">Email</string>
    <string name="usernameCadastro">Username</string>
    <string name="senha">Senha</string>
    <string name="logar">Logar</string>
    <string name="novoUsuario">Novo Usuário</string>
    <string name="facebook">Facebook</string>
    <string name="cadastro">Cadastrar</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_add_projetos">AddProjetos</string>

</resources>
