<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ufc.quixada.trocandoideias.TelaLogin"
    android:background="@drawable/back01" >   

    <EditText
        android:id="@+id/usernameCadastro"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="#000000"
        android:background="@drawable/design_text"
        android:gravity="center"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/usernameCadastro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:background="@drawable/design_text"
        android:gravity="center"/>

      <Button 
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cadastro"
        android:layout_marginBottom="40dp"
        android:layout_toLeftOf="@+id/cadastro"
        android:text="@string/logar"
        android:onClick="login"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/desing_botao"/>

    <Button
        android:id="@+id/loginFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignBottom="@+id/login"
        android:layout_alignParentRight="true"
        android:onClick="select"
        android:text="@string/facebook"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/desing_botao"
         />
    
    <Button
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/novoUsuario" 
        android:onClick="irParaCadastro"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/desing_botao"/>

    <ImageView
        android:id="@+id/imagemTela"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/imagemlampada" />

</RelativeLayout>
